--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             if (email === storedEmail && password === storedPassword) {
                 alert("Login successful!");
 
-                window.location.href = "index.html";
+                window.location.href = "home.html";
             } else {
                 alert("Invalid login credentials. Please try again.");
             }
@@ -48,3 +48,4 @@
     </script>
 </body>
 </html>
+
