--- a/sign-up.html
+++ b/sign-up.html
@@ -49,8 +49,9 @@
 
             alert("Account created successfully!");
 
-            window.location.href = "login.html";
+            window.location.href = "index.html";
         }
     </script>
 </body>
 </html>
+
