Fix HTML encoding issues in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -117,7 +117,7 @@
         }
 
         function goBack() {
-            window.location.href = "index.html";
+            window.location.href = "home.html";
         }
 
         function logout() {
@@ -127,3 +127,4 @@
     </script>
 </body>
 </html>
+
