--- a/dashboard.html
+++ b/dashboard.html
@@ -122,10 +122,11 @@
 
         function logout() {
             localStorage.clear();
-            window.location.href = "login.html";
+            window.location.href = "index.html";
         }
     </script>
 </body>
 </html>
+
 
 
